add buy item view and all templates

--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -10,7 +10,7 @@
 <h1>Hello world!</h1>
 <h1>There are the latest 10 items. Hurry up to buy on!</h1>
 {% for item in latest_item_list %}
-<a href="/item/{{ item.id }}/">{{ item }}</a> }}
+<a href="/item/{{ item.id }}/">{{ item }}</a>
 {% endfor %}
 </body>
 
