--- a/store/app/templates/app/detail.html
+++ b/store/app/templates/app/detail.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>{{ item }}</h1>
+    <form action="/buy/{{ item.id }}/" method="POST">
+        {% csrf_token %}
+      <button type="submit">Checkout</button>
+    </form>
 </body>
 
 </html>
