creating product and price objects, simple checkout implemented

--- a/store/app/templates/app/buy.html
+++ b/store/app/templates/app/buy.html
@@ -5,6 +5,6 @@
     <title>Buy this now!</title>
 </head>
 <body>
-  <h1>You are on page for buy {{item_id}}.</h1>
+  <h1>{{session_id}}</h1>
 </body>
 </html>
