--- a/store/app/templates/app/detail.html
+++ b/store/app/templates/app/detail.html
@@ -7,10 +7,29 @@
 
 <body>
     <h1>{{ item }}</h1>
-    <form action="/buy/{{ item.id }}/" method="POST">
+    <form action="/buy/{{ item.id }}/" method="GET">
         {% csrf_token %}
       <button type="submit">Checkout</button>
     </form>
 </body>
+
+
+<h1>Item 1</h1>
+<p>Description of Item 1</p>
+<p>1111</p>
+
+<button id="buy-button">Buy</button>
+    <script type="text/javascript">
+    var stripe = Stripe('pk_test_a9nwZVa5O7b0xz3lxl318KSU00x1L9ZWsF');
+    var buyButton = document.getElementById(buy-button');
+    buyButton.addEventListener('click', function() {
+    // Create a new Checkout Session using the server-side endpoint
+    // Redirect to Stripe Session Checkout
+    fetch('/buy/1', {method: 'GET'})
+    .then(response => return response.json())
+    .then(session => stripe.redirectToCheckout({ sessionId: session.id }))
+    });
+    </script>
+
 
 </html>
