redirect to payment page

--- a/store/app/templates/app/success.html
+++ b/store/app/templates/app/success.html
@@ -7,3 +7,9 @@
   <h1>Thank you bro!</h1>
 </body>
 </html>
+
+<script>
+       setTimeout(function(){
+            window.location.href = "{% url 'index' %}";
+         }, 3000);
+</script>
