--- a/store/app/templates/app/success.html
+++ b/store/app/templates/app/success.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Thanks for your order!</title>
+  <title>Успешно!</title>
 </head>
 <body>
-  <h1>Thank you bro!</h1>
+  <h2>Оплата успешно завершена. Спасибо за заказ!</h2>
 </body>
 </html>
 
