--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Index page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -14,6 +15,52 @@
     {% empty %}
         <li>Товаров пока нет! Вы можете их добавить через панель администратора.</li>
     {% endfor %}
+
+<h2>Товары в вашей корзине:</h2>
+
+<table class="table">
+  <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Наименование</th>
+        <th scope="col">Цена</th>
+        <th scope="col">Количество</th>
+        <th scope="col">Стоимость</th>
+    </tr>
+  </thead>
+  <tbody>
+        {% for item in cart_list %}
+        <tr>
+            <td></td>
+            <td><a href="/item/{{ item.id }}/">{{ item }}</a></td>
+            <td>{{ item.price }}</td>
+            <td>{{ item.amount }}</td>
+            <td>{{ item.subtotal }}</td>
+        </tr>
+        {% empty %}
+            <li>Корзина пуста.</li>
+        {% endfor %}
+
+  </tbody>
+</table>
+Общая стоимость товаров в корзине: {{ total.sum }} {{ currency }}
+
+
+
+    <p></p>
+
+    <form action="/buy/all/" method="POST">
+        {% csrf_token %}
+        <button type="submit">Оформить заказ из товаров в корзине</button>
+    </form>
+
+<h2>История заказов:</h2>
+    {% for item in latest_item_list %}
+        <li><a href="/item/{{ item.id }}/">{{ item }}</a></li>
+    {% empty %}
+        <li>Нет оформленных заказов.</li>
+    {% endfor %}
+
 </body>
 
 </html>
