--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -1,66 +1,111 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>USM Shop Homepage</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'app/css/styles.css' %}" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="{% url 'index' %}">Начать покупки!</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link" href="#!">Перейти в корзину</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">История заказов</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Мои контакты</a></li>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Index page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+                    </ul>
+                    <form class="d-flex">
+                        <button class="btn btn-outline-dark" type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Корзина
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_list|length }}</span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!-- Header-->
+        <header class="bg-dark py-3">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">USM Fake store</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Добро пожаловать! Вы находитесь на главной странице магазина.</p>
+                </div>
+            </div>
+        </header>
+        <!-- Section-->
+        <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                {% for item in latest_item_list %}
+                    <!-- THIS IS ITEM -->
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Скидки</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">
+                                        <a href="/item/{{ item.id }}/" style="text-decoration: none; color: #000000">{{ item }}</a>
+                                    </h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">{{ item.price }}</span>
+                                    {{ item.price }}
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center">
+                                    <form action="/add/{{ item.id }}/" method="POST">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-outline-dark mt-auto">Добавить в корзину</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- THIS -->
+                {% empty %}
+                    <li>Товаров пока нет! Вы можете их добавить через панель администратора.</li>
+                {% endfor %}
 
-<body>
-    <h2>Привет!</h2>
-    <h2>Это список доступных товаров:</h2>
-        {% for item in latest_item_list %}
-            <li><a href="/item/{{ item.id }}/">{{ item }}</a></li>
-        {% empty %}
-            <li>Товаров пока нет! Вы можете их добавить через панель администратора.</li>
-        {% endfor %}
-
-    <h2>Товары в вашей корзине:</h2>
-    <table class="table">
-      <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Наименование</th>
-            <th scope="col">Цена</th>
-            <th scope="col">Количество</th>
-            <th scope="col">Стоимость</th>
-        </tr>
-      </thead>
-      <tbody>
-            {% for item in cart_list %}
-            <tr>
-                <td></td>
-                <td><a href="/item/{{ item.id }}/">{{ item }}</a></td>
-                <td>{{ item.price }}</td>
-                <td>{{ item.amount }}</td>
-                <td>{{ item.subtotal }}</td>
-            </tr>
-            {% empty %}
-                <li>Корзина пуста.</li>
-            {% endfor %}
-      </tbody>
-    </table>
-    Общая стоимость товаров в корзине:
-    {% if total.sum %}
-        {{ total.sum }} {{ currency }}
-    {% else %}
-        0 {{ currency }}
-    {% endif %}
-
-
-    <form action="/buy/all/" method="POST">
-        {% csrf_token %}
-        <button type="submit">Перейти к оформлению заказа</button>
-    </form>
-
-    <h2>История заказов:</h2>
-        {% for item in latest_item_list %}
-            <li><a href="/item/{{ item.id }}/">{{ item }}</a></li>
-        {% empty %}
-            <li>Нет оформленных заказов.</li>
-        {% endfor %}
-
-</body>
-
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; USM Website 2023</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="{% static 'app/js/scripts.js' %}"></script>
+    </body>
 </html>
