--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -24,16 +24,17 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="#!">Перейти в корзину</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">История заказов</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Мои контакты</a></li>
+                        <li class="nav-item"><a class="nav-link" href="cart/">Перейти в корзину</a></li>
+                        <li class="nav-item"><a class="nav-link" href="history/">История заказов</a></li>
+                        <li class="nav-item"><a class="nav-link" href="admin/">Панель администратора</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about/">Мои контакты</a></li>
 
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex" action="cart/" method="GET">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Корзина
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_list|length }}</span>
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_count }}</span>
                         </button>
                     </form>
                 </div>
@@ -93,7 +94,9 @@
                     </div>
                     <!-- THIS -->
                 {% empty %}
-                    <li>Товаров пока нет! Вы можете их добавить через панель администратора.</li>
+                    <div class="text-center text-black" style="height: 50vh;">
+                        <p class="lead fw-normal text-black-50 mb-0">Товаров пока нет. Но Вы можете их добавить через панель администратора!</p>
+                    </div>
                 {% endfor %}
 
                 </div>
