--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -83,7 +83,7 @@
                                     </div>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">{{ item.price }}</span>
-                                    {{ item.price }}
+                                    {{ item.price }} {{ item.currency }}
                                 </div>
                             </div>
                             <!-- Product actions-->
