--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -106,6 +106,7 @@
                 {% endblock %}
                 </div>
 
+
             </div>
         </section>
         <!-- Footer-->
@@ -116,5 +117,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="{% static 'app/js/scripts.js' %}"></script>
+    <html>
     </body>
 </html>
