--- a/store/app/templates/app/index.html
+++ b/store/app/templates/app/index.html
@@ -89,7 +89,7 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center">
-                                    <form action="/add/{{ item.id }}/" method="POST">
+                                    <form action="/item/{{ item.id }}/add/" method="POST">
                                         {% csrf_token %}
                                         <button type="submit" class="btn btn-outline-success mt-auto">Добавить в корзину</button>
                                     </form>
@@ -120,3 +120,34 @@
     <html>
     </body>
 </html>
+
+<script type="text/javascript">
+    var buyButton = document.getElementById('buy-button');
+    buyButton.addEventListener('click', handler())
+
+    function handler() {
+        // Call your backend to create the Checkout Session
+        fetch('/api-buy/', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+              if (result.error) {
+                alert(result.error.message);
+              }
+        })
+    }
+
+    function alertFunction() {
+      alert("Hello there!");
+    }
+
+</script>
