--- a/store/app/templates/app/detail.html
+++ b/store/app/templates/app/detail.html
@@ -32,9 +32,8 @@
                 <button type="submit" class="btn btn-outline-dark mt-auto">Заказ в 1 клик</button>
             </form>
 
-            <button onclick='alertFunction()'>Outside alert</button>
+            <button id="buy-button" hidden>API fast order test</button>
 
-            <button id="buy-button">Function fast order</button>
         </div>
     </div>
 {% endblock %}
