--- a/store/app/templates/app/cancel.html
+++ b/store/app/templates/app/cancel.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html>
+{% extends 'app/index.html' %}
+<html lang="en">
 <head>
-  <title>Checkout canceled</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-    <h1>Forgot to add something to your cart? Shop around then come back to pay!</h1>
+{% block cart %}
+{% endblock %}
+
+{% block title %}
+    <p class="lead fw-normal text-white-50 mb-0">Что-то пошло не так...</p>
+{% endblock %}
+
+{% block house %}
+<div>
+     <h3> К сожалению, не удалось оплатить заказ. Ждём вас снова! </h3>
+</div>
+
+<script>
+       setTimeout(function(){
+            window.location.href = "{% url 'index' %}";
+         }, 3000);
+</script>
+
+{% endblock %}
+
+
 </body>
 </html>
