--- a/store/app/templates/app/about.html
+++ b/store/app/templates/app/about.html
@@ -9,7 +9,7 @@
 {% block cart %}
 {% endblock %}
 {% block title %}
-    <p class="lead fw-normal text-white-50 mb-0">Здесь размещены мои контакты в Телеграм, Гитхаб и Кодварс. </p>
+    <p class="lead fw-normal text-white-50 mb-0">Здесь размещены мои контакты. </p>
 {% endblock %}
 {% block house %}
     <input type="button" class="btn btn-primary" style="width: 150px;" onclick="location.href='https://t.me/usm322'" value="Telegram" />
