--- a/store/app/templates/app/cancel.html
+++ b/store/app/templates/app/cancel.html
@@ -15,7 +15,7 @@
 
 {% block house %}
 <div>
-     <h3> К сожалению, не удалось оплатить заказ. Ждём вас снова! </h3>
+     <h3> К сожалению, не удалось оплатить заказ. Но мы ждём Вас снова! </h3>
 </div>
 
 <script>
